--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         <div class="post-title max">
             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa alias assumenda iste nam ab impedit magni? Corrupti quis illum labore veniam commodi, mollitia nam velit, dicta nisi perferendis, voluptates cupiditate nemo excepturi laboriosam temporibus vel quia nostrum officiis nobis. Distinctio.
         </div>
-        <div class="container">
-            <div class="single-column">
+        <div class="container claerfix">
+            <div class="rettanglo-1">
                 <img src="img/male1.png" alt="">
                 <div class="rectangle">
                     <h2 class="name">Marco Bianchi</h2>
@@ -37,8 +37,8 @@
         </div>
         
         
-        <div class="container">
-            <div class="single-column">
+        <div class="container claerfix">
+            <div class="rettanglo-1">
                 <img src="img/male1.png" alt="">
                 <div class="rectangle">
                     <h2 class="name">Marco Bianchi</h2>
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-        <div class="container">
+        <div class="container claerfix">
             <div class="rettanglo-1">
                 <img src="img/male1.png" alt="">
                 <div class="rectangle">
